# android-pitch-scale

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  soundtouch_jni.cpp
app/src/main/java/com/example/pitchscale/: CrashHandler.kt  MainActivity.kt
app/src/main/java/com/example/pitchscale/dsp/: PitchShifter.kt  SoundTouchNative.kt
app/src/main/java/com/example/pitchscale/service/: PitchShifterService.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
